--- a/src/partials/components/sidebar.hbs
+++ b/src/partials/components/sidebar.hbs
@@ -92,6 +92,9 @@
                     <a href="tel:+74957237420" class="page-sidebar__contacts-link">+7 (495) 723-74-20</a>
                     <a href="mailto:atol.@mail.ru" class="page-sidebar__contacts-link">atol.@mail.ru</a>
                 </div>
+                <a href="#contact-modal" class="page-sidebar__contact-link js-open-modal">
+                    Оставить заявку
+                </a>
                 <div class="page-sidebar__languages">
                     <a href="#" class="page-sidebar__languages-link active">
                         RU
