--- a/src/scss/_solutions.scss
+++ b/src/scss/_solutions.scss
@@ -280,7 +280,7 @@
     @include breakpointMF(small-tablet) {
         grid-row: 1 / 2;
         grid-column: 1 / 3;
-       
+
         align-self: flex-start;
     }
 
@@ -548,6 +548,7 @@
         fill: white;
         flex-shrink: 0;
         margin-left: 3rem;
+        stroke: white;
 
         @include breakpoint(mobile) {
             width: 1.7rem;
@@ -669,6 +670,34 @@
             width: 2.8rem;
             height: 2.8rem;
             margin-right: 1.2rem;
+        }
+    }
+}
+
+.solutions__modal-accordions-scroll-wrapper {
+    @include breakpointMF(small-tablet) {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        mask-image: linear-gradient(to top, transparent 0rem, rgba(0, 0, 0, 1) 7rem);
+        mask-image: linear-gradient(to top, transparent 0rem, rgba(0, 0, 0, 1) 7rem, rgba(0, 0, 0, 1) calc(100% - 7rem), transparent 100%);
+        margin-top: -3rem;
+
+        .solutions__modal-accordions {
+            margin: 0;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow-x: hidden;
+            -webkit-overflow-scrolling: touch;
+            overscroll-behavior: contain;
+            padding-bottom: 5rem;
+            padding-top: 3rem;
+
+            @include noScrollbar();
         }
     }
 }
