Сделал карточки белыми

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -63,7 +63,7 @@
                         <ul class="swiper-wrapper business__list">
                             <li class="swiper-slide business__list-item">
                                 <a href="#" class="business__card">
-                                    <img src="img/business/1.svg" alt="" class="business__card-bg-image">
+                                    {{!-- <img src="img/business/1.svg" alt="" class="business__card-bg-image"> --}}
                                     <div class="business__card-photo-container">
                                         <img src="img/business/1.jpg" alt="" class="business__card-photo">
                                     </div>
@@ -112,7 +112,7 @@
                             </li>
                             <li class="swiper-slide business__list-item">
                                 <a href="#" class="business__card">
-                                    <img src="img/business/2.svg" alt="" class="business__card-bg-image">
+                                    {{!-- <img src="img/business/2.svg" alt="" class="business__card-bg-image"> --}}
                                     <div class="business__card-photo-container">
                                         <img src="img/business/2.jpg" alt="" class="business__card-photo">
                                     </div>
@@ -161,7 +161,7 @@
                             </li>
                             <li class="swiper-slide business__list-item">
                                 <a href="#" class="business__card">
-                                    <img src="img/business/3.svg" alt="" class="business__card-bg-image">
+                                    {{!-- <img src="img/business/3.svg" alt="" class="business__card-bg-image"> --}}
                                     <div class="business__card-photo-container">
                                         <img src="img/business/3.jpg" alt="" class="business__card-photo">
                                     </div>
