--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -259,7 +259,7 @@
                                 </button>
                                 <div class="solutions__modal-illustration">
                                     <img src="img/device-2.webp" alt="" class="solutions__modal-illustration-image">
-                                    <div class="solutions__modal-feature" style="left: 25%; top: 40%;">
+                                    <div class="solutions__modal-feature" style="left: 22%; top: 32%;">
                                         <div class="solutions__modal-feature-icon">
                                             <svg width="14" height="14" aria-hidden="true" class="icon-close">
                                                 <use xlink:href="#close"></use>
@@ -267,7 +267,43 @@
                                         </div>
                                         <div class="solutions__modal-feature-dropdown">
                                             <div class="solutions__modal-feature-dropdown-inner">
-                                                Прием оплаты банковской картой Visa, Master Card, Золотая Корона
+                                                Печать чека
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="solutions__modal-feature" style="left: 40%; top: 50%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                               Планшет с удобным сенсорным экраном 7 дюймов
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="solutions__modal-feature" style="left: 67%; top: 50%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                               4 USB порта для подключения оборудования
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="solutions__modal-feature" style="left: 67%; top: 72%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                               Кассовое ПО под любой тип бизнеса
                                             </div>
                                         </div>
                                     </div>
@@ -420,6 +456,30 @@
                                 </button>
                                 <div class="solutions__modal-illustration">
                                     <img src="img/device.webp" alt="" class="solutions__modal-illustration-image">
+                                    <div class="solutions__modal-feature" style="left: 25%; top: 15%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                                Печать чека
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="solutions__modal-feature" style="left: 50%; top: 40%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                                Прием оплаты банковской картой Visa, Mastercard, МИР, ЭЛКАРТ
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="solutions__modal-feature" style="left: 35%; top: 50%;">
                                         <div class="solutions__modal-feature-icon">
                                             <svg width="14" height="14" aria-hidden="true" class="icon-close">
@@ -428,7 +488,19 @@
                                         </div>
                                         <div class="solutions__modal-feature-dropdown">
                                             <div class="solutions__modal-feature-dropdown-inner">
-                                                Прием оплаты банковской картой Visa, Master Card, Золотая Корона
+                                                Кассовое ПО
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="solutions__modal-feature" style="left: 65%; top: 72%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                                Удобная клавиатура 15 клавиш
                                             </div>
                                         </div>
                                     </div>
@@ -571,7 +643,7 @@
                                 </button>
                                 <div class="solutions__modal-illustration">
                                     <img src="img/device-3.webp" alt="" class="solutions__modal-illustration-image">
-                                    <div class="solutions__modal-feature" style="left: 35%; top: 50%;">
+                                    <div class="solutions__modal-feature" style="left: 45%; top: 20%;">
                                         <div class="solutions__modal-feature-icon">
                                             <svg width="14" height="14" aria-hidden="true" class="icon-close">
                                                 <use xlink:href="#close"></use>
@@ -579,7 +651,43 @@
                                         </div>
                                         <div class="solutions__modal-feature-dropdown">
                                             <div class="solutions__modal-feature-dropdown-inner">
-                                                Прием оплаты банковской картой Visa, Master Card, Золотая Корона
+                                                Моментальная печать чека
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="solutions__modal-feature" style="left: 30%; top: 40%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                                Надежность - японский печатающий механизм Seiko
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="solutions__modal-feature" style="left: 64%; top: 42%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                                Световая индикация
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="solutions__modal-feature" style="left: 44%; top: 62%;">
+                                        <div class="solutions__modal-feature-icon">
+                                            <svg width="14" height="14" aria-hidden="true" class="icon-close">
+                                                <use xlink:href="#close"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="solutions__modal-feature-dropdown">
+                                            <div class="solutions__modal-feature-dropdown-inner">
+                                                Совместим с любым кассовым оборудованием
                                             </div>
                                         </div>
                                     </div>
