--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1546,7 +1546,7 @@
 
 
                 <h2 class="why-us__heading">
-                    Почему «Атол»
+                    Почему «АТОЛ»
                 </h2>
                 <div class="why-us__heading-text">
                     <p>
@@ -1578,7 +1578,7 @@
                             </div>
                             <div class="why-us__card-text">
                                 <p>
-                                    Атол — единственный производитель - участник
+                                    АТОЛ — единственный производитель - участник
                                     Пилотного проекта
                                     системы администрирования ККМ
                                     в Киргизии.
