--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -17,7 +17,7 @@
 
             <div class="intro__content">
                 <h1 class="intro__main-heading">
-                    Онлайн-кассы<br> Атол для Киргизии
+                    Онлайн-кассы<br> АТОЛ для Киргизии
                 </h1>
                 <div class="intro__text">
                     <p>
