--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -1260,7 +1260,7 @@
                                             <input type="radio" class="choose__form-checkbox-input" name="model"
                                                 checked="">
                                             <span class="choose__form-checkbox-content">
-                                                <img src="img/model.png" alt="" class="choose__form-checkbox-image">
+                                                <img src="img/device.webp" alt="" class="choose__form-checkbox-image">
                                                 <span class="choose__form-checkbox-mark">
                                                     <svg width="14" height="14" aria-hidden="true"
                                                         class="icon-checkmark">
@@ -1268,7 +1268,7 @@
                                                     </svg>
                                                 </span>
                                                 <span class="choose__form-checkbox-text">
-                                                    Sigma 3
+                                                    Sigma 5 Pay
                                                 </span>
                                             </span>
 
@@ -1276,7 +1276,7 @@
                                         <label class="choose__form-checkbox">
                                             <input type="radio" class="choose__form-checkbox-input" name="model">
                                             <span class="choose__form-checkbox-content">
-                                                <img src="img/model.png" alt="" class="choose__form-checkbox-image">
+                                                <img src="img/device-2.webp" alt="" class="choose__form-checkbox-image">
                                                 <span class="choose__form-checkbox-mark">
                                                     <svg width="14" height="14" aria-hidden="true"
                                                         class="icon-checkmark">
@@ -1284,7 +1284,7 @@
                                                     </svg>
                                                 </span>
                                                 <span class="choose__form-checkbox-text">
-                                                    Sigma 5
+                                                    Sigma 7
                                                 </span>
                                             </span>
 
@@ -1292,7 +1292,7 @@
                                         <label class="choose__form-checkbox">
                                             <input type="radio" class="choose__form-checkbox-input" name="model">
                                             <span class="choose__form-checkbox-content">
-                                                <img src="img/model.png" alt="" class="choose__form-checkbox-image">
+                                                <img src="img/device-3.webp" alt="" class="choose__form-checkbox-image">
                                                 <span class="choose__form-checkbox-mark">
                                                     <svg width="14" height="14" aria-hidden="true"
                                                         class="icon-checkmark">
@@ -1300,7 +1300,7 @@
                                                     </svg>
                                                 </span>
                                                 <span class="choose__form-checkbox-text">
-                                                    22 ФР
+                                                    ФР
                                                 </span>
                                             </span>
 
