--- a/src/scss/_choose.scss
+++ b/src/scss/_choose.scss
@@ -213,7 +213,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 
    
@@ -231,7 +231,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    position: relative;
+    z-index: 20;
     @include breakpoint(mobile) {
         width: 1.8rem;
         height: 1.8rem;
@@ -250,6 +251,8 @@
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.2;
+    position: relative;
+    z-index: 20;
 
     @include breakpoint(mobile) {
         font-weight: normal;
