--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -166,7 +166,7 @@
                                         <img src="img/business/3.jpg" alt="" class="business__card-photo">
                                     </div>
                                     <h3 class="business__card-title">
-                                        Для среднего бизнеса
+                                        Для крупного бизнеса
                                     </h3>
                                     <ul class="business__card-features-list">
                                         <li class="business__card-features-list-item">
