--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -62,7 +62,7 @@
                     <div class="swiper-container">
                         <ul class="swiper-wrapper business__list">
                             <li class="swiper-slide business__list-item">
-                                <a href="#" class="business__card">
+                                <a href="#solution-modal-2" class="business__card js-open-modal">
                                     {{!-- <img src="img/business/1.svg" alt="" class="business__card-bg-image"> --}}
                                     <div class="business__card-photo-container">
                                         <img src="img/business/1.jpg" alt="" class="business__card-photo">
@@ -111,7 +111,7 @@
                                 </a>
                             </li>
                             <li class="swiper-slide business__list-item">
-                                <a href="#" class="business__card">
+                                <a href="#solution-modal-1" class="business__card js-open-modal">
                                     {{!-- <img src="img/business/2.svg" alt="" class="business__card-bg-image"> --}}
                                     <div class="business__card-photo-container">
                                         <img src="img/business/2.jpg" alt="" class="business__card-photo">
@@ -160,7 +160,7 @@
                                 </a>
                             </li>
                             <li class="swiper-slide business__list-item">
-                                <a href="#" class="business__card">
+                                <a href="#solution-modal-1" class="business__card js-open-modal">
                                     {{!-- <img src="img/business/3.svg" alt="" class="business__card-bg-image"> --}}
                                     <div class="business__card-photo-container">
                                         <img src="img/business/3.jpg" alt="" class="business__card-photo">
