--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -39,7 +39,7 @@
 </section>
 
 
-<section class="section">
+{{!-- <section class="section">
     <div class="demo">
         <div class="demo__content">
             <div class="demo__video-wrapper">
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> --}}
 
 <section class="section" id="business">
     <div class="business">
@@ -1022,7 +1022,7 @@
                     </div>
                     <div class="equipment__col">
                         <ul class="equipment__hardware-list">
-                            <li class="equipment__hardware-list-item">
+                            {{!-- <li class="equipment__hardware-list-item">
                                 <a href="#" class="equipment__hardware-link">
                                     <div class="equipment__hardware-link-bg">
                                         <img src="img/equipment-bg.jpg" alt=""
@@ -1040,7 +1040,7 @@
                                         <use xlink:href="#diagonal-arrow"></use>
                                     </svg>
                                 </a>
-                            </li>
+                            </li> --}}
                             <li class="equipment__hardware-list-item">
                                 <a href="#" class="equipment__hardware-link">
                                     <div class="equipment__hardware-link-bg">
@@ -1174,7 +1174,7 @@
                                         обмениваться с внешними системами лояльности и легко интегрируется.
                                     </p>
                                 </div>
-                                <div class="integrations__card-bottom-row">
+                                {{!-- <div class="integrations__card-bottom-row">
                                     <div class="integrations__card-amount">
                                         9
                                     </div>
@@ -1185,7 +1185,7 @@
                                             с внешними системами лояльности
                                         </p>
                                     </div>
-                                </div>
+                                </div> --}}
                             </div>
                         </a>
                     </li>
@@ -1252,7 +1252,7 @@
                                     <input type="email" class="choose__form-input" required="" placeholder="e-mail*">
                                 </div>
                                 <div class="choose__form-field">
-                                    <input type="text" class="choose__form-input" placeholder="Ваш город">
+                                    <input type="text" class="choose__form-input" placeholder="Ваш город" required="">
                                 </div>
                                 <div class="choose__form-field choose__form-field--fullwidth">
                                     <div class="choose__form-checkboxes">
