--- a/src/scss/_intro.scss
+++ b/src/scss/_intro.scss
@@ -105,6 +105,7 @@
         // top: 80%;
         transition: transform .4s;
         margin-top: 7rem;
+        margin-bottom: 5rem;
         .no-touch &:hover,
         .touch &:active {
             transform:  scale(0.97);
