--- a/src/scss/_business.scss
+++ b/src/scss/_business.scss
@@ -3,8 +3,6 @@
     flex-direction: column;
     position: relative;
 
-    
-
     @include breakpointMF(small-tablet) {
         flex-grow: 1;
         padding-right: 3rem;
@@ -17,7 +15,6 @@
         // background-position: center;
     }
 
-
     @include breakpoint(mobile) {
         margin-bottom: 7rem;
     }
@@ -27,7 +24,7 @@
     font-weight: 600;
     font-size: 5.4rem;
     line-height: 115%;
-    margin-bottom: 7rem;
+    margin-bottom: 4rem;
 
     @include breakpoint(mobile) {
         font-style: normal;
@@ -106,17 +103,25 @@
     }
     .no-touch &:hover {
         .business__card-photo-container {
-            width: 24rem;
+            // width: 24rem;
+            transform: scale(0.8) translateY(-2rem);
         }
 
         .business__card-action {
             transform: translateY(-100%);
         }
 
+        .business__card-content {
+            transform: translateY(-5rem);
+        }
+
         &::after {
             opacity: 1;
         }
     }
+}
+.business__card-content {
+    transition: width 0.4s, transform .4s;
 }
 
 .business__card-bg-image {
@@ -138,7 +143,7 @@
     transform: translateZ(0);
     align-self: center;
     width: 29rem;
-    transition: width 0.4s;
+    transition: width 0.4s, transform .4s;
 
     @include breakpoint(mobile) {
         width: 16rem;
@@ -166,9 +171,8 @@
     font-weight: 600;
     font-size: 2.8rem;
     line-height: 3.5rem;
-    padding-bottom: 2.5rem;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.29);
-    margin-bottom: 2.3rem;
+
+    margin-bottom: 1.5rem;
     text-align: center;
 
     @include breakpoint(mobile) {
@@ -176,8 +180,24 @@
         font-weight: 600;
         font-size: 1.8rem;
         line-height: 1.2;
-        padding-bottom: 2.2rem;
-        margin-bottom: 2rem;
+      
+        margin-bottom: 1rem;
+    }
+}
+
+.business__card-title-text {
+    font-size: 1.4rem;
+    line-height: 1.2;
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+   
+    flex-direction: column;
+
+    margin-bottom: 1.5rem;
+
+    @include breakpoint(mobile) {
+        font-size: 1.2rem;
     }
 }
 
@@ -186,9 +206,11 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
     grid-gap: 2rem;
     grid-row-gap: 0.2rem;
-
+    border-top: 1px solid rgba(0, 0, 0, 0.29);
+    padding-top: 2.5rem;
     @include breakpoint(mobile) {
         grid-row-gap: 1rem;
+        padding-top: 2rem;
     }
 }
 
